<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="txt_glide">Glide - Image LOading Library by BumpTech</string>
    <string name="txt_load_app">LoadApp - Current Repository by Udacity</string>
    <string name="txt_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="glide">Glide</string>
    <string name="retrofit">Retrofit</string>
    <string name="load_app">Load App</string>

    <string name="txt_file_name">File Name: </string>
    <string name="txt_status">"Status: "</string>
    <string name="txt_ok">OK</string>
    <string name="status">Success</string>
    <string name="name">Glide - Image Loading Library by BumpTech</string>

    <string name="txt_select_a_file">Please select the file to download</string>
    <string name="url_notification_channel_id" translatable="false">load_channel</string>
    <string name="url_notification_channel_name" translatable="true">Load</string>

    <string name="txt_notification_title">Download completed</string>
    <string name="txt_channel_description">Notification channel for Load App</string>
    <string name="txt_open_detail">Open Detail</string>
</resources>
