<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/animatedetail"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/file_name_txt"
        style="@style/principal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/midMargin"
        android:text="@string/txt_file_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/file_name"
        style="@style/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/midMargin"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="txtxtxtxtxtxt" />

    <TextView
        android:id="@+id/status_txt"
        style="@style/principal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/midMargin"
        android:text="@string/txt_status"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_name_txt" />


    <TextView
        android:id="@+id/download_status"
        style="@style/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/midMargin"
        android:text="@string/status"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide"
        app:layout_constraintTop_toBottomOf="@id/file_name" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/midMargin"
        android:layout_marginBottom="@dimen/midMargin"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/txt_ok"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>